# dataeng-pytest-cookbook

./: pyproject.toml  pytest.ini
ETL/: ETL.py  data_transform_04.py  data_transform_05.py
modulo/: data_transform_02.py  data_transform_03.py  data_transform_04.py
src/: data_transform.py
tests/: test_data_transform.py
